Updated time to store classes and students

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <ul>
         <li><strong>Teacher Information:</strong> We collect and permanently store the names of active teachers provided by the institute.</li>
         <li><strong>User Information:</strong> Teachers sign up for the app using their institute-provided email. We collect and permanently store this information.</li>
-        <li><strong>Class and Student Information:</strong> Teachers upload class and student data from their grading matrices, including class details and student names and genders. This data is temporarily stored until the class is approved, after which it is permanently deleted.</li>
+        <li><strong>Class and Student Information:</strong> Teachers upload class and student data from their grading matrices, including class details and student names and genders. This data is temporarily stored for three months, after which it is permanently deleted.</li>
         <li><strong>Report Information:</strong> We collect and permanently store generated reports, including the report content, associated student and class data, and teacher feedback.</li>
         <li><strong>Student Performance Input:</strong> We collect the teachers’ input about their students’ performance used to generate reports to ensure reports match the input.</li>
         <li><strong>Regeneration Information:</strong> When a report is regenerated, we collect and permanently store information about the old and new reports to improve our services.</li>
@@ -64,7 +64,7 @@
     </ul>
 
     <h2>Data Retention and Deletion</h2>
-    <p>We retain temporary data (class and student information) until the class is approved. Once approved, this data is permanently deleted. All other collected data, including reports and associated information, is stored permanently to support ongoing service improvement, monitoring, and success measurement.</p>
+    <p>We retain temporary data (class and student information) only for three months. This data is then permanently deleted. All other collected data, including reports and associated information, is stored permanently to support ongoing service improvement, monitoring, and success measurement.</p>
 
     <h2>Data Security Measures</h2>
     <p>We take the security of your information seriously. We use a combination of technical and administrative security measures to protect your information from unauthorized access and use.</p>
